--- a/assets/css/base/typography.css
+++ b/assets/css/base/typography.css
@@ -76,18 +76,8 @@ h1,
 @media screen and (min-width: 1200px) {
 
     h1,
-    .h1-size,
-    .h1-size p {
-        font-size: 55px;
-    }
-}
-
-@media screen and (min-width: 1920px) {
-
-    h1,
-    .h1-size,
-    .h1-size p {
-        font-size: 65px;
+    .h1-size {
+        font-size: 64px;
     }
 }
 
@@ -106,6 +96,13 @@ h2,
     }
 }
 
+@media screen and (min-width: 1200px) {
+    h2,
+    .h2-size {
+        font-size: 48px;
+    }
+}
+
 h3,
 .h3-size {
     font-size: 22px;
@@ -116,6 +113,13 @@ h3,
     h3,
     .h3-size {
         font-size: 25px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    h3,
+    .h3-size {
+        font-size: 34px;
     }
 }
 
