--- a/assets/css/elements/buttons.css
+++ b/assets/css/elements/buttons.css
@@ -1,2 +1,107 @@
 /* #Buttons
 --------------------------------------------------------------- */
+.btn-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 0.5em;
+}
+
+@media screen and (min-width: 768px) {
+    .btn-wrapper {
+        flex-direction: row;
+        align-items: center;
+    }
+}
+
+.btn {
+    height: 40px;
+    padding: 0.35rem 1.4rem;
+    box-sizing: content-box;
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    font-size: 14px;
+    font-family: var(--body);
+    font-weight: 500;
+    text-transform: uppercase;
+    color: var(--black);
+    border: 1px solid var(--silver);
+    border-radius: var(--border-radius);
+    transition: background-color ease 350ms, color ease 350ms;
+    cursor: pointer;
+}
+
+.btn.btn:hover,
+.btn.btn:focus {
+    text-decoration: underline;
+}
+
+/* Colors */
+.btn.btn-primary {
+    background-color: var(--primary);
+    color: var(--white);
+}
+
+.btn.btn-secondary {
+    background-color: var(--secondary);
+    color: var(--white);
+}
+
+.btn.btn-tertiairy {
+    background-color: var(--tertiairy);
+    color: var(--white);
+}
+
+/* Icon */
+.btn[class*="btn-icon"] {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    gap: 10px;
+}
+
+.btn[class*="btn-icon"]:after {
+    content: "";
+    width: 20px;
+    height: 20px;
+    display: block;
+    background-size: 20px 20px;
+    transform: translateX(0);
+    transition: transform ease 350ms;
+}
+
+.btn.btn-primary[class*="btn-icon"]:after,
+.btn.btn-secondary[class*="btn-icon"]:after,
+.btn.btn-tertiairy[class*="btn-icon"]:after {
+    filter: brightness(0) invert(1);
+}
+
+.btn-icon-envelop:after {
+    background-image: url(../../icons/envelop.svg);
+}
+
+.btn-icon-user:after {
+    background-image: url(../../icons/user.svg);
+}
+
+/* Pagination */
+.navigation.pagination {
+    margin-top: var(--spacing-section-inner);
+    font-weight: 700;
+    font-family: var(--bold);
+}
+
+.navigation.pagination .nav-links {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1em;
+}
+
+.navigation.pagination a {
+    color: var(--primary);
+    text-decoration: none;
+}
