--- a/assets/css/pages/404.css
+++ b/assets/css/pages/404.css
@@ -1,2 +1,5 @@
 /* #404
 --------------------------------------------------------------- */
+.error404 #hero .btn {
+    margin-top: var(--spacing-section-inner);
+}
