--- a/assets/css/pages/page.css
+++ b/assets/css/pages/page.css
@@ -1,2 +1,6 @@
 /* #Page
 --------------------------------------------------------------- */
+.page-template-default:not(.home) main {
+    padding: 0 0 var(--spacing-section-outer) 0;
+    position: relative;
+}
