--- a/assets/css/base/typography.css
+++ b/assets/css/base/typography.css
@@ -2,7 +2,7 @@
 --------------------------------------------------------------- */
 body {
     font-family: var(--body);
-    line-height: 1.5;
+    line-height: 1.65;
     color: var(--primary);
     background-color: var(--white);
 }
@@ -132,7 +132,7 @@ h4,
 
     h4,
     .h4-size {
-        font-size: 23px;
+        font-size: 24px;
     }
 }
 
@@ -169,4 +169,11 @@ a {
 hr {
     border-top: 1px solid var(--primary);
     width: 250px;
+}
+
+.parent-title {
+    margin-bottom: -10px;
+    color: var(--secondary);
+    text-transform: uppercase;
+    font-weight: 500;
 }
