--- a/assets/css/elements/containers.css
+++ b/assets/css/elements/containers.css
@@ -20,6 +20,13 @@
   }
 }
 
+/* Small */
+@media screen and (min-width: 992px) {
+  .container-sm {
+    max-width: 1000px;
+  }
+}
+
 /* Large */
 @media screen and (min-width: 992px) {
   .container-lg {
