--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ Text Domain: new-maubeuge
 
 @import "./assets/css/elements/breadcrumbs.css";
 @import "./assets/css/elements/buttons.css";
+@import "./assets/css/elements/columns.css";
 @import "./assets/css/elements/containers.css";
 @import "./assets/css/elements/footer.css";
 @import "./assets/css/elements/forms.css";
@@ -46,8 +47,17 @@ Text Domain: new-maubeuge
 /* #Template Parts
 --------------------------------------------------------------- */
 
+@import "./assets/css/template-parts/association-discover.css";
 @import "./assets/css/template-parts/home-commitments.css";
+@import "./assets/css/template-parts/home-hero-slider.css";
+@import "./assets/css/template-parts/home-numbers.css";
+@import "./assets/css/template-parts/home-workshops.css";
+@import "./assets/css/template-parts/item-post.css";
+@import "./assets/css/template-parts/item-project.css";
+@import "./assets/css/template-parts/jobs-tabs.css";
+@import "./assets/css/template-parts/latest-posts.css";
 @import "./assets/css/template-parts/partners-grid.css";
+@import "./assets/css/template-parts/row-2-columns.css";
 
 /* #Templates
 --------------------------------------------------------------- */
@@ -56,7 +66,9 @@ Text Domain: new-maubeuge
 --------------------------------------------------------------- */
 
 @import "./assets/css/pages/404.css";
+@import "./assets/css/pages/archive-projects.css";
 @import "./assets/css/pages/front-page.css";
 @import "./assets/css/pages/index.css";
 @import "./assets/css/pages/page.css";
 @import "./assets/css/pages/single.css";
+@import "./assets/css/pages/single-project.css";
