--- a/assets/css/template-parts/row-2-columns.css
+++ b/assets/css/template-parts/row-2-columns.css
@@ -11,6 +11,18 @@
     align-items: flex-start;
 }
 
+.row-2-columns .formatted h3 {
+    color: var(--color-theme);
+    font-size: 20px;
+}
+
+@media screen and (min-width: 768px) {
+
+    .row-2-columns .formatted h3 {
+        font-size: 24px;
+    }
+}
+
 .row-2-columns .formatted ul {
     gap: 1.5rem;
 }
@@ -54,6 +66,13 @@
     border-radius: 0 10px 0 30px;
 }
 
+.row-2-columns .reverse .image-wrapper:before {
+    aspect-ratio: 0.75;
+    top: unset;
+    bottom: -19px;
+    border-radius: 0 10px 0 24px;
+}
+
 .row-2-columns .image-wrapper:after {
     width: 80%;
     right: -19px;
@@ -61,6 +80,12 @@
     z-index: -1;
     border: 1px solid var(--mercury);
     border-radius: 10px 0 30px 0;
+}
+
+.row-2-columns .reverse .image-wrapper:after {
+    top: -19px;
+    bottom: unset;
+    border-radius: 0 24px 0 10px;
 }
 
 .row-2-columns .thumbnail {
