--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ Text Domain: new-maubeuge
 
 @import "./assets/css/pages/404.css";
 @import "./assets/css/pages/archive-projects.css";
+@import "./assets/css/pages/archive-workshops.css";
 @import "./assets/css/pages/front-page.css";
 @import "./assets/css/pages/index.css";
 @import "./assets/css/pages/page.css";
