--- a/assets/css/template-parts/row-2-columns-regular.css
+++ b/assets/css/template-parts/row-2-columns-regular.css
@@ -1,4 +1,4 @@
-/* #Row 2 Columns
+/* #Row 2 Columns (Regular)
 --------------------------------------------------------------- */
 .row-2-columns {
     position: relative;
