--- a/assets/css/template-parts/jobs-tabs.css
+++ b/assets/css/template-parts/jobs-tabs.css
@@ -6,7 +6,172 @@
 
 .jobs-tabs h2 {
     max-width: 650px;
-    margin: 0 auto var(--spacing-title) auto;
+    margin: 0 auto 5px auto;
     display: block;
     text-align: center;
+}
+
+.jobs-tabs h2+p {
+    text-align: center;
+}
+
+.jobs-tabs-wrapper {
+    margin-top: var(--spacing-title);
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: center;
+    row-gap: var(--spacing-section-inner);
+    column-gap: 2rem;
+}
+
+@media screen and (min-width: 992px) {
+    .jobs-tabs-wrapper {
+        flex-direction: row;
+    }
+}
+
+/* Buttons */
+.jobs-tabs .job-tab-button {
+    width: 100%;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    align-items: center;
+    font-size: 14px;
+    font-family: var(--body);
+    color: var(--color-theme);
+    background: none;
+    border: 0;
+    opacity: 0.35;
+    cursor: pointer;
+    transition: opacity ease 350ms;
+}
+
+@media screen and (min-width: 992px) {
+    .jobs-tabs .job-tab-button {
+        order: -1;
+    }
+
+    .jobs-tabs.normal .job-tab-button {
+        max-width: 130px;
+        flex-direction: column;
+    }
+
+    .jobs-tabs.alternate .job-tab-button {
+        max-width: 275px;
+    }
+}
+
+.jobs-tabs .job-tab-button.selected,
+.jobs-tabs .job-tab-button:hover,
+.jobs-tabs .job-tab-button:focus {
+    opacity: 1;
+}
+
+.jobs-tabs .icon {
+    max-width: 58px;
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+/* Content */
+.jobs-tabs .job-tab-content {
+    flex-basis: 100%;
+    display: none;
+    flex-direction: column;
+    gap: var(--spacing-section-inner);
+}
+
+@media screen and (min-width: 992px) {
+    .jobs-tabs .job-tab-content {
+        flex-direction: row;
+    }
+}
+
+.jobs-tabs .job-tab-content.visible {
+    display: flex;
+}
+
+.jobs-tabs .job-tab-content>div {
+    width: 100%;
+    flex: 1 1 0;
+}
+
+@media screen and (min-width: 992px) {
+    .jobs-tabs .job-tab-content .col:first-child {
+        max-width: 33%;
+    }
+}
+
+.jobs-tabs .job-tab-content .image-wrapper {
+    position: relative;
+}
+
+.jobs-tabs .job-tab-content .image-wrapper:before,
+.jobs-tabs .job-tab-content .image-wrapper:after {
+    content: "";
+    height: auto;
+    position: absolute;
+    z-index: -1;
+}
+
+.jobs-tabs .job-tab-content .image-wrapper:before {
+    width: 45%;
+    aspect-ratio: 0.75;
+    bottom: -30px;
+    left: -19px;
+    background-color: var(--color-theme);
+    border-radius: 30px 0 10px 0;
+}
+
+.jobs-tabs .job-tab-content .image-wrapper:after {
+    width: 80%;
+    aspect-ratio: 1;
+    right: -19px;
+    bottom: -19px;
+    z-index: -1;
+    opacity: 0.8;
+    border: 1px solid var(--mercury);
+    border-radius: 10px 0 30px 0;
+}
+
+@media screen and (min-width: 992px) {
+    .jobs-tabs .job-tab-content .image-wrapper:before {
+        bottom: -41px;
+        left: -19px;
+    }
+
+    .jobs-tabs .job-tab-content .image-wrapper:after {
+        aspect-ratio: 0.62;
+        right: -13px;
+        bottom: -25px;
+    }
+}
+
+.jobs-tabs .job-tab-content .thumbnail {
+    width: 100%;
+    height: auto;
+    aspect-ratio: 1;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: var(--border-radius);
+}
+
+@media screen and (min-width: 992px) {
+    .jobs-tabs .job-tab-content .thumbnail {
+        aspect-ratio: 0.62;
+    }
+}
+
+.jobs-tabs .job-tab-content>.formatted {
+    align-items: flex-start;
+}
+
+.jobs-tabs .job-tab-content>.formatted .btn {
+    background-color: var(--color-theme);
 }
