--- a/assets/css/pages/single-job.css
+++ b/assets/css/pages/single-job.css
@@ -1,2 +1,20 @@
 /* #Single Job
---------------------------------------------------------------- */ 
+--------------------------------------------------------------- */
+/* Hero */
+.single-avs_job .parent-title {
+    color: var(--color-theme);
+}
+
+.single-avs_job .hero .thumbnail {
+    width: 100%;
+    height: 475px;
+    margin: 2rem 0;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+/* Introduction */
+.single-avs_job .introduction {
+    text-align: left;
+}
