--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ Text Domain: new-maubeuge
 @import "./assets/css/template-parts/insights-list.css";
 @import "./assets/css/template-parts/item-post.css";
 @import "./assets/css/template-parts/item-project.css";
+@import "./assets/css/template-parts/job-qualities.css";
 @import "./assets/css/template-parts/jobs-tabs.css";
 @import "./assets/css/template-parts/join-us.css";
 @import "./assets/css/template-parts/latest-posts.css";
