--- a/assets/css/template-parts/home-numbers.css
+++ b/assets/css/template-parts/home-numbers.css
@@ -7,15 +7,12 @@
     background-color: var(--selago);
 }
 
-.home-numbers h1 {
-    margin-bottom: 5px;
-}
-
 .home-numbers h1 + p {
-    margin-bottom: var(--spacing-title);
+    margin-top: 5px;
 }
 
 .home-numbers .numbers-grid {
+    margin-top: var(--spacing-title);
     display: flex;
     flex-direction: column;
     gap: 1rem;
