feat(single-avs_job): add job cta form

--- a/assets/css/template-parts/job-qualities.css
+++ b/assets/css/template-parts/job-qualities.css
@@ -1,7 +1,7 @@
 /* #Job Qualities
 --------------------------------------------------------------- */
 .job-qualities {
-  margin-bottom: var(--spacing-section-outer);
+  margin: var(--spacing-section-outer) 0;
   padding: var(--spacing-section-inner) 0;
   text-align: center;
   background-color: var(--selago);
