--- a/assets/css/template-parts/insights-list.css
+++ b/assets/css/template-parts/insights-list.css
@@ -1,10 +1,13 @@
 /* #Insights List
 --------------------------------------------------------------- */
 .insights-list {
-    margin: var(--spacing-section-outer) 0;
+  margin: var(--spacing-section-outer) 0;
+  padding: var(--spacing-section-inner) 0;
+  background-color: var(--selago);
 }
 
 .insights-list h2 {
-    margin-bottom: var(--spacing-title);
-    text-align: center;
+  max-width: 700px;
+  margin: 0 auto var(--spacing-title) auto;
+  text-align: center;
 }
