--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ Text Domain: new-maubeuge
 @import "./assets/css/template-parts/item-project.css";
 @import "./assets/css/template-parts/job-cta-form.css";
 @import "./assets/css/template-parts/job-qualities.css";
+@import "./assets/css/template-parts/job-related-workshops.css";
 @import "./assets/css/template-parts/jobs-tabs.css";
 @import "./assets/css/template-parts/join-us.css";
 @import "./assets/css/template-parts/latest-posts.css";
