--- a/assets/css/template-parts/insights-list.css
+++ b/assets/css/template-parts/insights-list.css
@@ -11,3 +11,126 @@
   margin: 0 auto var(--spacing-title) auto;
   text-align: center;
 }
+
+.insights-list .insights {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1rem;
+}
+
+@media screen and (min-width: 992px) {
+  .insights-list .insights {
+    flex-direction: row;
+  }
+}
+
+/* Element */
+.insights-list .insights .insight {
+  min-height: 450px;
+  position: relative;
+  perspective: 1000px;
+  cursor: pointer;
+}
+
+@media screen and (min-width: 992px) {
+  .insights-list .insights .insight {
+    flex-basis: calc((100% / 3) - (6rem / 3));
+  }
+}
+
+.insights-list .insight .insight-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: transform ease 350ms;
+  transform-style: preserve-3d;
+}
+
+.insights-list .insight:hover .insight-inner,
+.insights-list .insight:focus .insight-inner {
+  transform: rotateY(180deg);
+}
+
+.insights-list .insight .face {
+  width: 100%;
+  min-height: 450px;
+  height: 100%;
+  position: absolute;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  gap: 2rem;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  border-radius: var(--border-radius);
+  backface-visibility: hidden;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
+.insights-list .insight .face:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 100%);
+}
+
+.insights-list .insight .face:nth-child(2) {
+  transform: rotateY(180deg);
+}
+
+.insights-list .insight p {
+  z-index: 1;
+  color: var(--white);
+  font-weight: 300;
+}
+
+.insights-list .insight p:before,
+.insights-list .insight p:after {
+  content: "“";
+  height: 35px;
+  display: block;
+  font-family: var(--bold);
+  font-size: 50px;
+  font-weight: 700;
+  line-height: 1;
+}
+
+.insights-list .insight p:after {
+  transform: rotate(180deg);
+}
+
+.insights-list .insight .identity {
+  z-index: 1;
+}
+
+.insights-list .insight .name {
+  color: var(--white);
+  font-weight: 700;
+}
+
+.insights-list .insight .job {
+  color: var(--white);
+  font-size: 13px;
+  font-weight: 300;
+}
+
+.insights-list .insight .flip-icon {
+  width: 1.5rem;
+  height: 1.5rem;
+  position: absolute;
+  right: 2rem;
+  bottom: 2rem;
+  z-index: 1;
+}
+
+.insights-list .insight .flip-icon svg {
+  width: 100%;
+  height: auto;
+}
